--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0bfe5d; }
+  background: #8d2b84; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #90bd42; }
+  background: #4a1764; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #77db35; }
+  background: #cf38ae; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e413d0; }
+  background: #900c86; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #df5563; }
+  background: #1be63b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #683df2; }
+  background: #640873; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #9a8aea; }
+  background: #e21186; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2c44fa; }
+  background: #4da7b4; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6e92bf; }
+  background: #a56f44; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #158d07; }
+  background: #75f609; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #07ca79; }
+  background: #602808; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #296010; }
+  background: #444968; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d2a479; }
+  background: #cfeb4b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b53ed4; }
+  background: #21d38f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7b0502; }
+  background: #52491c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e0323b; }
+  background: #213aba; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #970ae1; }
+  background: #021551; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #916aeb; }
+  background: #148c1e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d36c48; }
+  background: #5097eb; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b57040; }
+  background: #86e18a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #544c75; }
+  background: #1b9b38; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #27e106; }
+  background: #de9eec; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #09c63d; }
+  background: #1fa530; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ec4fad; }
+  background: #76a543; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #481b1c; }
+  background: #485bfb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c881cd; }
+  background: #c60d6f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0a2ea1; }
+  background: #7e9943; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d9c14d; }
+  background: #b0df60; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #0b77e1; }
+  background: #7ce6ed; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f83e17; }
+  background: #b8a9fc; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f2cb9d; }
+  background: #713baf; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #40c366; }
+  background: #0514d8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d0d1cd; }
+  background: #2b1f78; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #325d60; }
+  background: #290d5e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2a6f5f; }
+  background: #1509f0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #39765a; }
+  background: #eb4cd9; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cb0787; }
+  background: #46ba7b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6f66a4; }
+  background: #748f58; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f1f3e1; }
+  background: #310ded; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #3d8508; }
+  background: #197785; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a6461b; }
+  background: #e4939f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b23f1c; }
+  background: #3b3f67; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #02b248; }
+  background: #4a45e1; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b48161; }
+  background: #8982b2; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #6e1b84; }
+  background: #10db0d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e77995; }
+  background: #34580a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #8df021; }
+  background: #b791c6; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #15a450; }
+  background: #0bb973; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #908247; }
+  background: #c051fd; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f3bd44; }
+  background: #1654a7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #aa2fc5; }
+  background: #763418; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3a62bf; }
+  background: #42c194; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #69793d; }
+  background: #18893f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #756bc1; }
+  background: #fb03c7; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c57ec2; }
+  background: #0387c0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c2efb3; }
+  background: #0a4d34; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a77ca6; }
+  background: #5a4cd0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #881e6b; }
+  background: #4274fd; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7b77cf; }
+  background: #b5848b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3b1d14; }
+  background: #d43217; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #887b50; }
+  background: #078f01; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f3e26d; }
+  background: #02e9eb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5d442e; }
+  background: #0741fd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f0d8e9; }
+  background: #6fb0e1; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #544db1; }
+  background: #f2ed27; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f149da; }
+  background: #1dbedf; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6b8ba9; }
+  background: #a2673e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #33fc5e; }
+  background: #46499e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2a93ee; }
+  background: #d84a87; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b0a404; }
+  background: #5f9e73; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bc7b68; }
+  background: #769b20; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #366750; }
+  background: #5631ed; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #bd37aa; }
+  background: #a0509e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #275cab; }
+  background: #6489f9; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #2de1e5; }
+  background: #81394a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #2d907e; }
+  background: #f37058; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e171c9; }
+  background: #51a076; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #82b054; }
+  background: #9212c4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2a89a8; }
+  background: #ed2dba; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #294a28; }
+  background: #061ed9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #03974d; }
+  background: #4f03dc; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #875d85; }
+  background: #7e7808; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4dc69f; }
+  background: #b162b0; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #07c570; }
+  background: #f1bb91; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1b1ce9; }
+  background: #7313bc; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #15cbba; }
+  background: #a511b1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #62582b; }
+  background: #3efc4b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e2be32; }
+  background: #d57a1a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #85ddc7; }
+  background: #482b45; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #431e36; }
+  background: #617154; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #bb38a5; }
+  background: #66d759; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #9b4cbc; }
+  background: #a1cb16; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #095a11; }
+  background: #e5ee9d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #70df30; }
+  background: #37a86f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d9d056; }
+  background: #b31a67; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #caebf1; }
+  background: #d99549; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7c2a5b; }
+  background: #f73f54; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #0cfa6d; }
+  background: #cbef2a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #797d02; }
+  background: #2b224c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ae2e93; }
+  background: #c3627b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15101,9 +15101,9 @@ option {
 .system-settings-wrapper .tabs-aggre button {
   padding-left: 8px !important; }
 .system-settings-wrapper .field-section {
-  padding: 20px 0px; }
-.system-settings-wrapper .static-routes-div {
   padding: 20px; }
+.system-settings-wrapper .static-routes-div {
+  padding: 20px 33px; }
 .system-settings-wrapper .tabs-aggre button {
   margin: 6px 0px; }
 
@@ -15119,6 +15119,12 @@ option {
 
 .field-section .d-flex div {
   width: 100% !important; }
+  .field-section .d-flex div .plus-minus-icons {
+    display: grid;
+    grid-gap: 14px;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    align-items: center; }
   .field-section .d-flex div:nth-child(1) {
     margin-right: 15px; }
   .field-section .d-flex div:nth-child(4) {
@@ -15343,6 +15349,8 @@ option {
         flex-basis: auto;
         text-align: center; }
 
+  .system-settings-content-wrapper .tab-title {
+    padding-left: 15px; }
   .system-settings-content-wrapper .summary-details-row .col-lg-6 {
     padding-left: 15px; }
 
