--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -62,11 +62,15 @@
         }
     }
     .system-settings-content-wrapper {
+        .tab-title {
+            padding-left: 15px;
+        }
         .summary-details-row {
             .col-lg-6 {
               padding-left: 15px;
             }
           }
+
     }
     .dashboard-top-sec-new {
         grid-template-columns: repeat(1, 1fr) !important;
