--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f650cb; }
+  background: #be58e0; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #27411f; }
+  background: #459edd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #a20994; }
+  background: #e1c058; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #61389b; }
+  background: #61eb20; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3c15df; }
+  background: #40bfb8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1e87dd; }
+  background: #7f3d48; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #240a49; }
+  background: #cd727e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0ba7ea; }
+  background: #6586f1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5386fe; }
+  background: #dff43c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #9478b1; }
+  background: #8dab62; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f6d7e1; }
+  background: #5ba6a7; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3ca343; }
+  background: #4dbcfb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #350f80; }
+  background: #04e184; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #244449; }
+  background: #6d0499; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5463ca; }
+  background: #fe81f9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d60377; }
+  background: #5df3a1; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #43414f; }
+  background: #d9fc93; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #6c5290; }
+  background: #7a38ad; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #852305; }
+  background: #bb1415; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #209c7e; }
+  background: #25c58c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #cef34b; }
+  background: #125875; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #525d30; }
+  background: #7aa203; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #121bf2; }
+  background: #910c89; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4261ed; }
+  background: #11557a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ae4185; }
+  background: #3be575; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7c82f1; }
+  background: #089825; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c3b5e1; }
+  background: #5a68d5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #08a462; }
+  background: #905346; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #33e2e8; }
+  background: #10e571; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #7f3f6f; }
+  background: #9b118a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4b0120; }
+  background: #6e1fce; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3ef674; }
+  background: #1f522c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #48f739; }
+  background: #7a1691; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #598dcc; }
+  background: #a8ebd5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d3c6f6; }
+  background: #5d5770; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6ad6db; }
+  background: #c89132; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #76ef58; }
+  background: #6dc710; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ef3dea; }
+  background: #d8028a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0113b6; }
+  background: #379121; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #634868; }
+  background: #d5aa68; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8242b2; }
+  background: #d5372d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e772fe; }
+  background: #2bf785; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0cc89b; }
+  background: #e85b3b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a9e277; }
+  background: #506659; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #926c6c; }
+  background: #56fbcb; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d51110; }
+  background: #38a3da; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bb047f; }
+  background: #b8fa16; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a74729; }
+  background: #26ad4c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #882e2e; }
+  background: #ee1f4a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #029a69; }
+  background: #50bd53; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1f0c8e; }
+  background: #5b53d6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c80493; }
+  background: #381bec; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0795dc; }
+  background: #6933a6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #43c40f; }
+  background: #1ec5ee; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #311141; }
+  background: #c020ff; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2c9a13; }
+  background: #d9cb6c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #92d60c; }
+  background: #a14510; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3bb41a; }
+  background: #3c46ba; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #768168; }
+  background: #bf4f2e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c44a29; }
+  background: #8478d2; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #32a457; }
+  background: #af269d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #6caa04; }
+  background: #f3cacf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2b8944; }
+  background: #eeecd2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #413577; }
+  background: #c7135c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #18d982; }
+  background: #3acc4f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #97502f; }
+  background: #06d9c5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #2c9021; }
+  background: #7b621b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a528cf; }
+  background: #614eb2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3a40bd; }
+  background: #8d709b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0fdce5; }
+  background: #25c6f5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #205b2d; }
+  background: #19c745; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d45191; }
+  background: #02cfb5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #04c25e; }
+  background: #f129f1; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c3d12f; }
+  background: #1b0d5e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #7c60f9; }
+  background: #2fc983; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e29c1c; }
+  background: #f14ae4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ce2b7c; }
+  background: #57fea3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f50b55; }
+  background: #67609b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #855595; }
+  background: #07cc73; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #034284; }
+  background: #7f1795; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a7fb4d; }
+  background: #b15031; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8da75d; }
+  background: #e82b7b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a0993e; }
+  background: #bfef22; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e07d7a; }
+  background: #de90fc; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0ba4d8; }
+  background: #d340b6; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e2adf6; }
+  background: #f49d9c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #02a7e1; }
+  background: #ffd97d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e4c93f; }
+  background: #93f910; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9df6d5; }
+  background: #39c27c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2528fe; }
+  background: #672252; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #90fb9a; }
+  background: #d278b8; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #144e81; }
+  background: #1dbb79; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9d2df4; }
+  background: #e8dc31; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f9b324; }
+  background: #e66975; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f4910b; }
+  background: #24cfa9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6541ec; }
+  background: #2da0a8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f45c54; }
+  background: #4fc307; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #671fe0; }
+  background: #d381f4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #984709; }
+  background: #b22bb3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0b9216; }
+  background: #af06bc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10511,24 +10511,37 @@ table .bold-heading {
   .user-group-row input {
     margin-right: 10px; }
 
+::-webkit-input-placeholder {
+  /* Edge */
+  color: #6c757d; }
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #6c757d; }
+
+::placeholder {
+  color: #6c757d; }
+
 .widget-slider .slider-bg {
   background: rgba(227, 227, 227, 0.25);
   overflow: hidden;
   margin-top: 20px; }
 
 .dropdown-select-native select {
+  color: #6c757d;
   height: 36px !important;
   background-image: url(../images/down-arrow.svg) !important;
-  padding: 9px 10px;
+  padding: 9px 10px !important;
   border: 1px solid #cdcdd6;
   font-size: 15px;
   line-height: 1em;
   width: 100%; }
 
 .dropdown-select-native-legend select {
+  color: #6c757d;
   height: 36px !important;
   background-image: url(../images/select-dropdown-dark.svg) !important;
-  padding: 9px 10px;
+  padding: 9px 10px !important;
   border: 1px solid #cdcdd6;
   font-size: 15px;
   line-height: 1em;
@@ -10573,7 +10586,7 @@ table .bold-heading {
 
 .inner-legend-colors-col {
   display: grid;
-  grid-template-columns: 70px 1fr;
+  grid-template-columns: auto 1fr;
   align-items: center;
   grid-gap: 20px; }
 
@@ -10590,13 +10603,16 @@ table .bold-heading {
   display: flex;
   padding-left: 20px; }
   .widget-checkbox-filter-row .widget-checkbox-filter-box {
-    margin-top: 20px;
+    margin-top: 5px;
     display: grid;
     grid-template-columns: auto auto;
     align-items: center;
     margin-right: 20px; }
     .widget-checkbox-filter-row .widget-checkbox-filter-box div:first-child {
       margin-right: 10px; }
+    .widget-checkbox-filter-row .widget-checkbox-filter-box .show-onotop-input {
+      padding: 9px 6px !important;
+      text-align: center; }
 
 .checkbox-big {
   height: 38px !important;
@@ -10623,17 +10639,17 @@ table .bold-heading {
   overflow-y: scroll;
   display: flex;
   margin: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 175px);
-  grid-gap: 20px; }
+  display: flex;
+  flex-wrap: wrap; }
   .bubble-tags-wrapper .bubble {
     background: #f6f6f6;
-    padding: 10px;
+    padding: 8px;
     display: grid;
     justify-content: center;
-    grid-gap: 15px;
+    grid-gap: 10px;
     grid-template-columns: auto auto auto;
-    align-items: center; }
+    align-items: center;
+    font-size: 14px; }
     .bubble-tags-wrapper .bubble a {
       display: flex; }
 
@@ -12849,6 +12865,7 @@ li.prev {
 .modal-add-connections-wrapper select,
 .LoginPanel select {
   border: 1px solid #cdcdd6;
+  color: #6c757d;
   padding: 5.5px;
   font-size: 15px;
   line-height: 1em;
