--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -207,6 +207,7 @@ li.prev {
 
   select {
     border: 1px solid #cdcdd6;
+    color: #6c757d;
     padding: 5.5px;
     font-size: 15px;
     line-height: 1em;
