--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3792,7 +3792,19 @@ table .bold-heading {
 
  input {
   margin-right: 10px;
+  
  }
+}
+::-webkit-input-placeholder { /* Edge */
+  color: #6c757d;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #6c757d;
+}
+
+::placeholder {
+  color: #6c757d;
 }
 
 .widget-slider {
@@ -3805,9 +3817,10 @@ table .bold-heading {
 
 .dropdown-select-native {
  select {
+   color: #6c757d;
   height: 36px !important;
   background-image: url(../images/down-arrow.svg) !important;
-  padding: 9px 10px;
+  padding: 9px 10px !important;
   border: 1px solid #cdcdd6;
   font-size: 15px;
   line-height: 1em;
@@ -3816,9 +3829,10 @@ table .bold-heading {
 }
 .dropdown-select-native-legend {
  select {
+   color: #6c757d;
   height: 36px !important;
   background-image: url(../images/select-dropdown-dark.svg) !important;
-  padding: 9px 10px;
+  padding: 9px 10px !important;
   border: 1px solid #cdcdd6;
   font-size: 15px;
   line-height: 1em;
@@ -3880,7 +3894,7 @@ table .bold-heading {
 
 .inner-legend-colors-col {
  display: grid;
- grid-template-columns: 70px 1fr;
+ grid-template-columns: auto 1fr;
  align-items: center;
  grid-gap: 20px;
 }
@@ -3903,7 +3917,7 @@ table .bold-heading {
 
  padding-left: 20px;
  .widget-checkbox-filter-box {
-  margin-top: 20px;
+  margin-top: 5px;
   display: grid;
   grid-template-columns: auto auto;
   align-items: center;
@@ -3912,6 +3926,10 @@ table .bold-heading {
   div:first-child {
    margin-right: 10px;
   }
+  .show-onotop-input {
+    padding: 9px 6px !important;
+    text-align: center;
+   }
  }
 }
 
@@ -3919,6 +3937,8 @@ table .bold-heading {
  height: 38px !important;
  width: 46px !important;
  margin-right: 10px;
+
+ 
 }
 
 .include-exclude-checkbox-row {
@@ -3943,22 +3963,22 @@ table .bold-heading {
 }
 
 .bubble-tags-wrapper {
- max-height: 100px;
- overflow-y: scroll;
- display: flex;
- margin: 20px;
- display: grid;
- grid-template-columns: repeat(auto-fit, 175px);
- grid-gap: 20px;
+  max-height: 100px;
+  overflow-y: scroll;
+  display: flex;
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
 
  .bubble {
   background: #f6f6f6;
-  padding: 10px;
+  padding: 8px;
   display: grid;
   justify-content: center;
-  grid-gap: 15px;
+  grid-gap: 10px;
   grid-template-columns: auto auto auto;
   align-items: center;
+  font-size: 14px;
   a {
    display: flex;
   }
